syntax = "proto3";

package com.chuckerteam.chucker.sample;

option java_package = "com.chuckerteam.chucker.sample.grpc";
option java_multiple_files = true;

// A simple service for testing
service SampleGreeter {
  // Unary call
  rpc SayHello (HelloRequest) returns (HelloReply);

  // Server streaming call
  rpc SayHelloServerStream (HelloRequest) returns (stream HelloReply);

  // Client streaming call
  rpc SayHelloClientStream (stream HelloRequest) returns (HelloReply);

  // Bidirectional streaming call
  rpc SayHelloBidiStream (stream HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
